# amr_autonomy

./: .gitignore  README.md  install_dependencies.sh
.github/: copilot-instructions.md
ros2_ws/src/amr_bringup/: package.xml  setup.py
ros2_ws/src/amr_bringup/launch/: bringup_sim.launch.py  nav_bringup.launch.py  slam_bringup.launch.py  test_rplidar.launch.py
ros2_ws/src/amr_bringup/rviz/: test_rplidar.rviz
ros2_ws/src/amr_comm_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/amr_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/amr_description/launch/: display.launch.py  gazebo.launch.py  sim.launch.py
ros2_ws/src/amr_description/meshes/: README.md
ros2_ws/src/amr_description/models/rack_conveyor/: model.config  model.sdf
ros2_ws/src/amr_description/models/workcell/: model.sdf
ros2_ws/src/amr_description/rviz/: display_config.rviz
ros2_ws/src/amr_description/urdf/: robot.xacro  wheel_macro.xacro
ros2_ws/src/amr_description/worlds/: large_warehouse.sdf  medium_warehouse.sdf  small_warehouse.sdf  warehouse.sdf
ros2_ws/src/amr_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/amr_navigation/: README.md  package.xml  setup.py
ros2_ws/src/amr_navigation/amr_navigation/: teleop_override.py
ros2_ws/src/amr_navigation/launch/: bringup_all.launch.py  ekf.launch.py  nav.launch.py  nav2.launch.py
ros2_ws/src/amr_navigation/maps/: my_warehouse_map.pgm  my_warehouse_map.yaml
ros2_ws/src/amr_navigation/maps/medium_warehouse/: medium_warehouse.pgm  medium_warehouse.yaml
ros2_ws/src/amr_navigation/maps/small_warehouse/: small_warehouse.pgm  small_warehouse.yaml
ros2_ws/src/amr_navigation/params/: ekf.yaml  nav2_mppi_params.yaml  nav2_params.yaml
ros2_ws/src/amr_navigation/rviz/: nav2_config.rviz  nav2_view.rviz
ros2_ws/src/amr_slam/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/amr_slam/amr_slam/: save_map.py
ros2_ws/src/amr_slam/launch/: continue_mapping.launch.py  localization.launch.py  slam.launch.py
ros2_ws/src/amr_slam/params/: localization_params.yaml  slam_params.yaml
ros2_ws/src/amr_slam/rviz/: slam_view.rviz
ros2_ws/src/amr_slam/scripts/: save_map.sh
ros2_ws/src/amr_teleop/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/amr_teleop/amr_teleop/: test_joy.py
ros2_ws/src/amr_teleop/launch/: teleop.launch.py
ros2_ws/src/amr_teleop/params/: teleop.yaml
ros2_ws/src/avg_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/avg_bringup/launch/: slam_bringup.launch.py
ros2_ws/src/avg_comm_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/avg_comm_bridge/avg_comm_bridge/: comm_bridge_node.py
ros2_ws/src/avg_description/: CMakeLists.txt  ENHANCEMENTS.md  README.md  package.xml
ros2_ws/src/avg_description/launch/: display.launch.py  gazebo.launch.py  sim.launch.py
ros2_ws/src/avg_description/meshes/: README.md
ros2_ws/src/avg_description/rviz/: display_config.rviz
ros2_ws/src/avg_description/urdf/: materials.xacro  robot.xacro  sensor_macro.xacro  wheel_macro.xacro
ros2_ws/src/avg_description/worlds/: warehouse.sdf
ros2_ws/src/avg_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/avg_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/avg_navigation/avg_navigation/: teleop_override.py
ros2_ws/src/avg_slam/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/avg_slam/launch/: slam.launch.py
ros2_ws/src/avg_slam/params/: slam_params.yaml
ros2_ws/src/avg_slam/rviz/: slam_view.rviz
ros2_ws/src/avg_slam/scripts/: save_map.sh
ros2_ws/src/avg_teleop/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/avg_teleop/avg_teleop/: teleop_node.py
ros2_ws/src/avg_teleop/launch/: teleop.launch.py
ros2_ws/src/avg_teleop/params/: teleop.yaml
