<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for AMR - orchestrates complete system launch</description>
  <maintainer email="yossefhady53@gmail.com">yossef</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- AMR packages -->
  <depend>amr_description</depend>
  <depend>amr_teleop</depend>
  <depend>amr_slam</depend>
  <depend>amr_navigation</depend>
  
  <!-- ROS 2 core -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- Utilities -->
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
