<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_description</name>
  <version>0.0.0</version>
  <description>URDF description for 4-wheeled warehouse AMR robot with sensors (LIDAR, IMU, Camera)</description>
  <maintainer email="yossefhady53@gmail.com">yossef</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  
  <!-- Gazebo Harmonic (gz sim) dependencies -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
