<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_navigation</name>
  <version>0.0.0</version>
  <description>Navigation package for AMR with Nav2 and AMCL localization for Mecanum drive robot</description>
  <maintainer email="yossefhady53@gmail.com">yossef</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
