<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_slam</name>
  <version>0.0.0</version>
  <description>SLAM package for AMR robot using slam_toolbox</description>
  <maintainer email="yossefhady53@gmail.com">yossef</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>slam_toolbox</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  
  <!-- Launch dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
